Added Authorization on clientside, tested with some test views, need to implement guard for the access to pages

--- a/Src/WebClientApp/WebClient/src/app/views/test/test.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/test/test.component.html
@@ -1,1 +1,5 @@
 <p>test works!</p>
+
+<button type="button" class="default-button" (click)="xhrRequest()">make xhr request with auth</button>
+
+<button type="button" class="default-button" (click)="refreshToken()">refresh token</button>
