--- a/Src/WebClientApp/WebClient/src/styles.css
+++ b/Src/WebClientApp/WebClient/src/styles.css
@@ -13,21 +13,10 @@
     padding: 0;
 }
 
-/* Make the body and HTML element take up the entire viewport */
 body,
 html {
     height: 100%;
-    /* margin: 0;
-  padding: 0; */
-    /* overflow: hidden; Prevent scrollbars */
 }
-
-/* Style the app-root to take up the entire viewport
-app-root {
-  width: 100%;
-  height: 100%;
-  display: block;
-} */
 
 .default-input {
     width: 100%;
@@ -36,6 +25,7 @@ app-root {
     border-radius: 20px;
     padding: 25px;
 
+    outline: none;
     border: 2px solid var(--primary-color-dark-theme);
     background-color: transparent;
     color: rgba(var(--primary-color-dark-theme-rgb), 1);
@@ -47,11 +37,16 @@ app-root {
         font-size 0.2s ease-in-out;
 }
 
-.default-input:focus {
+.default-input:hover,
+.default-input:focus{
     outline: none;
+    /* border: 3px solid var(--primary-color-dark-theme); */
+    box-shadow:
+        0 0 0 3px var(--bg-color-dark-theme),
+        0 0 0 6px var(--primary-color-dark-theme);
 }
 
-.default-button {
+.default-button, .default-button:active {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -62,6 +57,7 @@ app-root {
     border-radius: 20px;
     padding: 25px;
 
+    outline: none;
     border: 1px solid var(--primary-color-dark-theme) !important;
     background-color: var(--primary-color-dark-theme) !important;
     color: var(--bg-color-dark-theme) !important;
@@ -74,17 +70,8 @@ app-root {
         font-size 0.2s ease-in-out;
 }
 
-.default-input:focus,
-.default-input:hover{
-    outline: none;
-    /* border: 3px solid var(--primary-color-dark-theme); */
-    box-shadow:
-        0 0 0 3px var(--bg-color-dark-theme),
-        0 0 0 6px var(--primary-color-dark-theme);
-}
-
-.default-button:focus,
-.default-button:hover {
+.default-button:hover,
+.default-button:focus {
     outline: none;
     box-shadow:
     0 0 0 3px var(--bg-color-dark-theme),
