--- a/Src/WebClientApp/WebClient/src/app/shared/header/header.component.html
+++ b/Src/WebClientApp/WebClient/src/app/shared/header/header.component.html
@@ -1,4 +1,10 @@
 <header>
-  some generic header
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Angular 2 - CRUD</h1>
+      </div>
+    </div>
+  </div>
 
 </header>
