Added link in signup and login page to pass from one to other, also added link style and default font-family

--- a/Src/WebClientApp/WebClient/src/app/views/login/login.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/login/login.component.html
@@ -18,6 +18,8 @@
     <input class="default-input" type="password" [(ngModel)]="loginRequestData.password" placeholder="Password">
     <br><br>
     <button class="default-button" (click)="login()">Login</button>
+    <br><br><br><br>
+    <a class="default-link" routerLink="/signup">Not a User? Sign Up</a>
   </div>
 </div>
 
