--- a/Src/WebClientApp/WebClient/src/app/views/test/test.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/test/test.component.html
@@ -1,8 +1,12 @@
 <p>test works!</p>
 
-<button type="button" class="default-button" (click)="xhrRequest()">make xhr request with auth</button>
+<button type="button" class="default-button" (click)="xhrRequest()">
+    make xhr request with auth
+</button>
 
-<button type="button" class="default-button" (click)="refreshToken()">refresh token</button>
+<button type="button" class="default-button" (click)="refreshToken()">
+    refresh token
+</button>
 
 <button type="button" class="default-button" (click)="logout()">logout</button>
 ```
