Added checks on email and username availability on signup page

--- a/Src/WebClientApp/WebClient/src/app/views/signup/signup.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/signup/signup.component.css
@@ -44,3 +44,8 @@ input::-ms-input-placeholder {
 .hide {
     display: none;
 }
+
+.availabilityError{
+	margin-top: 10px;
+	margin-bottom: -15px;
+}
