Initialized wallets, need to add list of transactions made on wallet, the rest is working fine

--- a/Src/WebClientApp/WebClient/src/app/views/login/login.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/login/login.component.css
@@ -19,12 +19,6 @@
     }
 }
 
-input::placeholder {
-    color: var(--primary-color-dark-theme);
-    opacity: 0.8;
-}
-
-input::-ms-input-placeholder {
-    color: var(--primary-color-dark-theme);
-    opacity: 0.8;
+.default-input{
+	padding: 15px;
 }
