--- a/Src/WebClientApp/WebClient/src/styles.css
+++ b/Src/WebClientApp/WebClient/src/styles.css
@@ -6,12 +6,23 @@
     --primary-color-dark-theme: #ba3cde;
     --primary-color-dark-theme-rgb: 186, 60, 222;
 	--error-color-dark-theme: #cf0000;
+
+	--income-color-dark-theme: #00bfa5;
 }
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
+.primary{
+	color: var(--primary-color-dark-theme) !important;
+}
+
+.secondary{
+	color: var(--bg-color-dark-theme) !important;
 }
 
 body,
@@ -21,10 +32,9 @@ html {
 
 .default-input {
     width: 100%;
-    height: 40px;
 
     border-radius: 20px;
-    padding: 25px;
+	padding: 5px;
 
     outline: none;
     border: 2px solid var(--primary-color-dark-theme);
@@ -47,6 +57,16 @@ html {
         0 0 0 6px var(--primary-color-dark-theme);
 }
 
+.default-input::placeholder {
+    color: var(--primary-color-dark-theme);
+    opacity: 0.8;
+}
+
+.default-input::-ms-input-placeholder {
+    color: var(--primary-color-dark-theme);
+    opacity: 0.8;
+}
+
 .default-button,
 .default-button:active {
     display: inline-flex;
@@ -60,9 +80,9 @@ html {
     padding: 25px;
 
     outline: none;
-    border: 1px solid var(--primary-color-dark-theme) !important;
-    background-color: var(--primary-color-dark-theme) !important;
-    color: var(--bg-color-dark-theme) !important;
+    border: 1px solid var(--primary-color-dark-theme);
+    background-color: var(--primary-color-dark-theme);
+    color: var(--bg-color-dark-theme);
 
     cursor: pointer;
     font-size: 1.75em;
@@ -109,4 +129,23 @@ html {
 
 .error{
 	color: var(--error-color-dark-theme);
+}
+
+.default-list{
+	list-style-type: none;
+	padding: 0;
+
+}
+
+.default-editable-list-item{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	border-bottom: 1px solid var(--primary-color-dark-theme);
+}
+
+.default-editable-list-item > a{
+	text-decoration: none;
+	color: var(--primary-color-dark-theme);
 }
