Added Transactions list to wallet, improved graphichs, managed lists with max height (through flex: 1) and overflow

--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-create/wallet-create.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-create/wallet-create.component.css
@@ -3,7 +3,7 @@
 }
 
 .bottom-button {
-	margin-top: 5%;
+	margin: 40px 0;
 }
 
 .component-header{
@@ -11,4 +11,8 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.childMainPage{
+	flex: 1;
 }
