--- a/Src/WebClientApp/WebClient/src/app/app.component.html
+++ b/Src/WebClientApp/WebClient/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header *ngIf="showHeader"></app-header>
-<router-outlet></router-outlet>
+<div style="height: 100vh; display: flex; flex-direction: column;">
+    <app-header *ngIf="showHeader"></app-header>
+    <router-outlet></router-outlet>
+</div>
