--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet.component.css
@@ -1,3 +1,22 @@
 *{
 	color: var(--primary-color-dark-theme);
 }
+
+:host{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
+.container{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
+.mainPage{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
