--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <h3 class="text-center">My Wallets</h3>
     </div>
-    <div class="col-md-12" style="padding: 40px;">
+    <div class="col-md-12 mainPage">
         <router-outlet></router-outlet>
     </div>
 </div>
