--- a/Src/WebClientApp/WebClient/src/styles.css
+++ b/Src/WebClientApp/WebClient/src/styles.css
@@ -8,6 +8,7 @@
 	--error-color-dark-theme: #cf0000;
 
 	--income-color-dark-theme: #00bfa5;
+	--expense-color-dark-theme: #ff1744;
 }
 
 * {
@@ -35,6 +36,7 @@ html {
 
     border-radius: 20px;
 	padding: 5px;
+	padding-left: 10px;
 
     outline: none;
     border: 2px solid var(--primary-color-dark-theme);
@@ -65,6 +67,14 @@ html {
 .default-input::-ms-input-placeholder {
     color: var(--primary-color-dark-theme);
     opacity: 0.8;
+}
+
+.no-style-input{
+	border: none;
+	outline: none;
+	background-color: transparent;
+	color: var(--primary-color-dark-theme);
+	font-size: 1em;
 }
 
 .default-button,
@@ -148,4 +158,10 @@ html {
 .default-editable-list-item > a{
 	text-decoration: none;
 	color: var(--primary-color-dark-theme);
+}
+
+.childRouteFlex{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
