--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-start/wallet-start.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-start/wallet-start.component.html
@@ -13,7 +13,9 @@
 <br>
 
 <div class="list-container">
-    <app-wallet-list></app-wallet-list>
+    <div style="padding: 40px;">
+		<app-wallet-list></app-wallet-list>
+	</div>
 </div>
 
 <button class="default-button bottom-button" [routerLink]="['/wallet/create']">
