--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-list/wallet-list.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-list/wallet-list.component.css
@@ -2,6 +2,12 @@
     color: var(--primary-color-dark-theme);
 }
 
+.default-list-container{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
 .default-editable-list-item {
     cursor: pointer;
     display: flex;
@@ -21,4 +27,16 @@
     right: 0;
     bottom: 0;
     overflow: auto;
+	padding: 40px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 20px;
+}
+
+.empty-list-container{
+	padding: 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex: 1;
 }
