--- a/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-start/wallet-start.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/wallet/wallet-start/wallet-start.component.html
@@ -12,10 +12,11 @@
 
 <br>
 
-<div class="list-container">
-    <div style="padding: 40px;">
+<div class="mainChild">
+	<div class="list-container">
 		<app-wallet-list></app-wallet-list>
 	</div>
+
 </div>
 
 <button class="default-button bottom-button" [routerLink]="['/wallet/create']">
