Initilized Transaction Components, working Transaction start and Transaction Create

--- a/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-list/transaction-list.component.html
+++ b/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-list/transaction-list.component.html
@@ -30,7 +30,9 @@
                         'expense-amount': !transaction.isIncome
                     }"
                 >
+					{{ transaction.isIncome ? '+' : '-' }}
                     {{ transaction.amount }}
+					{{ transaction.currencyCode }}
                 </div>
                 <div class="text-end">
                     {{ transaction.currencyCode }}
