--- a/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-list/transaction-list.component.css
+++ b/Src/WebClientApp/WebClient/src/app/views/transaction/transaction-list/transaction-list.component.css
@@ -22,3 +22,14 @@
 	flex: 1;
 }
 
+.date-label{
+	font-weight: lighter;
+	opacity: 0.7;
+}
+
+.badge{
+	background-color: var(--primary-color-dark-theme);
+	color: var(--bg-color-dark-theme);
+	font-weight: 500;
+	font-size: 0.75rem;
+}
